# dark-matter

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/dark_matter/: __init__.py  cli.py  core.py  display.py  homebrew.py  logger.py
tests/: conftest.py  test_cli.py  test_core.py  test_display.py  test_homebrew.py
